# evolving_wordle

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/web/: .env.example  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx
apps/web/src/api/: client.ts  trainingSocket.ts  types.ts
apps/web/src/components/: BaselineComparison.tsx  ChampionPanel.tsx  ControlPanel.tsx  EvolutionChart.tsx  ExplainabilityPanel.tsx  HallOfFame.tsx  LabBar.tsx  Layout.tsx  primitives.tsx  (+4 more)
trainer/: README.md  pyproject.toml  run.sh  setup.sh
trainer/src/wordle_evolution/: __init__.py
trainer/src/wordle_evolution/baselines/: __init__.py  candidate_bot.py  entropy_bot.py  frequency_bot.py  random_bot.py
trainer/src/wordle_evolution/experiments/: __init__.py  compare_runs.py  run_experiment.py
trainer/src/wordle_evolution/features/: __init__.py  entropy.py  feature_extractor.py  frequency.py
trainer/src/wordle_evolution/ga/: __init__.py  chromosome.py  crossover.py  evolution.py  fitness.py  mutation.py  population.py  selection.py
trainer/src/wordle_evolution/io/: __init__.py  artifacts.py  import_words.py
trainer/src/wordle_evolution/server/: __init__.py  main.py  schemas.py  training_manager.py  websocket.py
trainer/src/wordle_evolution/utils/: __init__.py  seed.py  timing.py
trainer/src/wordle_evolution/wordle/: __init__.py  candidate_filter.py  scoring.py  types.py  words.py
trainer/tests/: conftest.py  test_candidate_filter.py  test_features.py  test_fitness.py  test_ga.py  test_scoring.py
(+27 files in other folders)
