[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wordle_evolution"
version = "0.1.0"
description = "Genetic-algorithm trainer for a heuristic Wordle bot (Python half of a hybrid project)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "numpy>=1.26",
    "rich>=13.7",
    "orjson>=3.9",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wordle_evolution = ["wordle/data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["wordle_evolution"]
